--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,40 @@
-.App {
-  text-align: center;
+*{
+  box-sizing: border-box;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.app {
+  margin: 0;
+  padding: 0;
   display: flex;
   flex-direction: column;
-  align-items: center;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  align-items: center;
+  height: 100vh;
+  box-sizing: border-box;
+  background-color: beige;
 }
 
-.App-link {
-  color: #61dafb;
+body {
+  margin:0;
+  font-family: sans-serif;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.status {
+  font-size: 1.5rem;
+  margin: 1em;
+}
+
+.reset {
+  cursor: pointer;
+  border: 1px solid black;
+  background-color: white;
+  padding: 0.5em 1.5em;
+  margin-top: 2em;
+  margin-bottom: 7em;
+  border-radius: 2em;
+
+}
+
+.reset:hover {
+  box-shadow: 1px 1px #888;
 }
