--- a/src/App.css
+++ b/src/App.css
@@ -11,7 +11,7 @@
   align-items: center;
   height: 100vh;
   box-sizing: border-box;
-  background-color: beige;
+  background-color: white;
 }
 
 body {
